# Terraform

./: .gitattributes  CMakeLists.txt  README.md
cmake/: patch_qwtconfig.cmake  qwtconfig.pri.in
include/: atmosphere_chart_widget.h  atmosphere_model.h  atmosphere_widget.h  atmospheric_cell_state.h  atmospheric_circulation_model.h  atmospheric_lapse_rate_model.h  atmospheric_radiation_model.h  co2_convective_adjustment.h  emission_layer_model.h  equal_area_projection.h  height_color_scale.h  mollweide_projection.h  planet_presets.h  planet_surface_grid.h  planet_surface_point.h  rotation_mode.h  segment_selector_widget.h  solar_calculator.h  solar_display.h  subsurface_grid.h  subsurface_temperature_solver.h  surface_advection_model.h  surface_atmosphere_coupler.h  surface_cell.h  surface_globe_widget.h  surface_height_model.h  surface_height_scale_widget.h  surface_heightmap.h  surface_map_cache.h  surface_map_interpolator.h  surface_map_mode.h  surface_map_widget.h  surface_point_state.h  surface_point_status_dialog.h  surface_pressure_scale_widget.h  surface_pressure_transport_model.h  surface_temperature_calculator.h  surface_temperature_plot.h  surface_temperature_scale_widget.h  surface_temperature_state.h  (+3 more)
src/: atmosphere_chart_widget.cpp  atmosphere_model.cpp  atmosphere_widget.cpp  atmospheric_cell_state.cpp  atmospheric_circulation_model.cpp  atmospheric_lapse_rate_model.cpp  atmospheric_pressure_model.cpp  atmospheric_pressure_model.h  atmospheric_radiation_model.cpp  co2_convective_adjustment.cpp  emission_layer_model.cpp  height_color_scale.cpp  mode_illustration_widget.cpp  mode_illustration_widget.h  mollweide_projection.cpp  orbit_animation_model.cpp  orbit_animation_model.h  orbit_segment_calculator.cpp  orbit_segment_calculator.h  planet_presets.cpp  planet_surface_grid.cpp  segment_selector_widget.cpp  solar_calculator.cpp  solar_display.cpp  subsurface_grid.cpp  subsurface_temperature_solver.cpp  surface_advection_model.cpp  surface_atmosphere_coupler.cpp  surface_globe_widget.cpp  surface_height_model.cpp  surface_height_scale_widget.cpp  surface_heightmap.cpp  surface_map_cache.cpp  surface_map_interpolator.cpp  surface_map_widget.cpp  surface_point_state.cpp  surface_point_status_dialog.cpp  surface_pressure_scale_widget.cpp  surface_pressure_transport_model.cpp  surface_temperature_calculator.cpp  (+8 more)
